PayRollSystem/src/objects/EFT_Transaction_Status__c.object
<CustomObject>
    <description>custom object for trigger assignment.</description>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesHeader</label>
        <referenceTo>SalesHeader__c</referenceTo>
        <relationshipLabel>EFT Transaction Status</relationshipLabel>
        <relationshipName>EFT_Transaction_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>EFT Transaction Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EFT Transaction Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EFT Transaction Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>